# EdgeEye

./: .gitignore  README.en.md  README.md  README.zh-CN.md  docker-compose.yml
.trellis/: .template-hashes.json  workflow.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_camera_bridge.py  test_camera_stream_api.py  test_edge_model.py  test_health.py  test_member4_api.py  test_system_dashboard.py
dataset/: README.md
dataset/docs/: edgeeye-detector-v1-baseline-report.md  edgeeye-detector-v1-report.md  edgeeye-insulator-v1-domain-r1-report.md  edgeeye-insulator-v1-domain-r1-validation-audit.json  (+3 more)
docs/: 01-edge-atlas.md  02-vision-detection.md  03-meter-rules-advice.md  03-rules-advice.md  04-backend-api.md  05-frontend-testing.md  README.md  api-spec.md  contracts.md  engineering-standards.md  interfaces-and-deliverables.md  openapi.yaml  review-notes.md
edge-app/: README.md
model-deploy/: README.md  classes-edgeeye-insulator-v1.json  classes-v1.json  edge_acl_om_bridge.py  edge_onnx_bridge.py  expected-output-edgeeye-insulator-v1.json  expected-output-v1.json  label-edgeeye-insulator-v1.names  preprocess-v1.json
models/: README.md
training/: README.md  analyze_insulator_candidate.py  check_env.py  export_onnx.py  generate_expected_output.py  prepare_dataset.py  pyproject.toml  train.py  validate_dataset.py
training/config/: classes.json  dataset.template.yaml  label.names  preprocess-v1.json
web/: README.md  index.html  package.json  vite.config.ts
(+143 files in other folders)
